Fix the alignment issues for icon and defination list

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -448,6 +448,13 @@ ul ul ul {
   margin-top: var(--base-medium-space);
 }
 
+.doc span.image {
+  line-height: 1;
+  vertical-align: -0.5em;
+  display: inline-flex;
+  padding: 0 0.25ex;
+}
+
 .doc .abstract blockquote {
   font-size: 0.9375rem;
   margin: 0;
@@ -645,7 +652,7 @@ table.tableblock pre code.language-bash.hljs {
 }
 
 .doc .dlist dt + dd {
-  margin-top: var(--base-small-space);
+  margin-top: var(--base-extra-small-space);
 }
 
 /* .doc .dlist dd > .openblock > .content > :first-child {
